Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-5986-ge6bced7 https://github.com/reactos/reactos/commit/e6bced7a353132121387c77ed16d67bd10e9d8d5
Description
In ReactOS 0.4.15 rev fe440f7, the window is opened in the wrong position when moved and minimized using the minimize button.
Windows Server 2003 opens minimized windows in the correct position.
Attachments
Issue Links
- blocks
-
CORE-13895 Minimizing windows without explorer.exe running makes them unusable
-
- Open
-
-
CORE-18350 Control Panel Applets : Locked in minimized state
-
- Resolved
-