[EXPLORER] Restore minimized windows with the correct position (#5488)

Stop storing and setting window positions from the taskbar and rely
on the window's existing position instead. Partial revert of e6bced7a353.

Windows are now correctly positioned when being restored from the taskbar.
This also fixes an issue where minimizing and opening Task Manager causes
the window to become blank when running our shell in Windows Server 2003.

CORE-19055 CORE-13895 CORE-18350